fix: align hero image with Neumann source layout

--- a/src/components/StoryImage/StoryImage.module.scss
+++ b/src/components/StoryImage/StoryImage.module.scss
@@ -15,6 +15,7 @@
     @include branding;
 
     object-fit: cover;
+object-position: 50% 75%;
 
     &.static {
         position: static !important;
